--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8">
     <link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials">
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./service-worker.js')
+            .then(function(registration) {
+                // Registration was successful
+                console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            }).catch(function(err) {
+                // registration failed :(
+                console.log('ServiceWorker registration failed: ', err);
+            });
+      }
+    </script>
     <style>
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
