--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+@font-face {
+  font-family: 'BebasNeue-Regular';
+  src: url('./src/assets/BebasNeue-Regular.ttf');
+}
     </style>
   </head>
   <body>
