--- a/index.html
+++ b/index.html
@@ -63,14 +63,17 @@ table {
 .start-screen {
   position: absolute;
   width: 100vw;
-  background-color: aqua;
+  /* background-color: aqua; */
+  background-image: url('./src/assets/bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
   cursor: pointer;
-  // display: none;
 }
 .start-screen h1 {
   font-size: 50px;
   margin: 100px auto;
+  color: #135677;
   display: block;
   text-align: center;
 }
@@ -87,11 +90,11 @@ table {
   display: block;
   text-align: center;
 
-
+}
 @font-face {
   font-family: 'BebasNeue-Regular';
   src: url('./src/assets/BebasNeue-Regular.ttf');
-}
+} 
     </style>
   </head>
   <body>
