--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ table {
   position: absolute;
   width: 100vw;
   /* background-color: aqua; */
-  background-image: url('./src/assets/bg.png');
+  background-image: url('bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
